assets/stylesheets/components/_buttons.scss
.btn {
  border-radius: $border-radius-base;
  margin-top: 5px;
  margin-bottom: 5px;
  white-space: normal;

  &.active,
  &:active,
  &:focus {
    &, &:focus {
      box-shadow: none;
      outline: none;
    }
  }

  &.btn-lg {
    font-size: $base-font-size;
    padding: 15px 30px;
  }

  &, &.btn-md {
    font-size: $font-size-small;
    padding: 10px 20px;
  }

  &.btn-sm {
    font-size: $font-size-smaller;
    padding: 6px 18px;
  }

  &.btn-primary {
    @include crds-button-variant(
      $btn-primary-color,
      $btn-primary-bg,
      $btn-primary-border);

    .dark-theme & {
      .btn-secondary {
        @include crds-button-variant(
          $btn-secondary-color,
          $btn-secondary-bg,
          $btn-secondary-border);
      }
    }
  }

  &.btn-secondary {
    @include crds-button-variant(
      $btn-secondary-color,
      $btn-secondary-bg,
      $btn-secondary-border);
  }

  &.btn-gray {
    @include crds-button-variant(
      $btn-gray-color,
      $btn-gray-bg,
      $btn-gray-border);
  }

  &.btn-default {
    @include crds-button-variant(
      $btn-default-color,
      $btn-default-bg,
      $btn-default-border);
  }
}

.btn-option {
  border-style: solid;
  border-width: 1px;

  background-color: $btn-option-bg;
  border-color: $btn-option-border;
  color: $btn-option-color;

  &.active, &:active {
    &, &:focus, &:hover {
      box-shadow: none;

      background-color: $cr-teal;
      border-color: $cr-teal;
      color: $btn-option-color;
    }
  }

  &:hover {
    background-color: darken($btn-option-bg, 10);
    border-color: darken($btn-option-border, 10);
    color: $btn-option-color;
  }

  :focus {
    border-color: $input-border-focus;
    box-shadow: 0 0 0 1px $input-border-focus inset;
  }

  &.btn-outline {
    background-color: transparent;
    border-color: $btn-option-border;
    color: $btn-option-bg;

    &.active,
    &:active,
    &.active:focus,
    &:active:focus,
    &.active:hover,
    &:active:hover {
      &, .dark-theme & {
        background-color: $cr-teal;
        border-color: $cr-teal;
        color: $btn-option-color;
      }
    }

    &:hover {
      background-color: shade($cr-white, 1%);

      .dark-theme & {
        background-color: transparent;
        border-color: darken($btn-option-border, 5);
      }
    }
  }

  &.btn-link {
    background: none;
    border-color: transparent;
    color: $btn-option-bg;
    text-decoration: none;

    &.active,
    &:active {
      background: $cr-teal;
      border-color: $cr-teal;
      color: $btn-option-color;

      &:hover {
        color: darken($btn-option-color, 5);
      }

      &:focus {
        border-color: $cr-teal;
        box-shadow: none;
      }
    }

    &:hover {
      color: darken($btn-option-bg, 10);
    }

    &:focus {
      border-color: $input-border-focus;
      box-shadow: 0 0 0 1px $input-border-focus inset;
    }
  }

  &.disabled {
    &.active, &:active {
      &, &:focus, &:hover {
        background-color: $btn-option-bg;
        border-color: $btn-option-border;
        color: $btn-option-color;
      }
    }

    &:hover {
      background-color: $btn-option-bg;
      border-color: $btn-option-border;
      color: $btn-option-color;
    }

    &.btn-outline {
      &.active, &:active, &:active:focus, &:active:hover {
        background-color: transparent;
        border-color: $btn-option-border;
        color: $btn-option-bg;
      }

      &:hover {
        background-color: transparent;
        border-color: $btn-option-border;
        color: $btn-option-bg;
      }
    }

    .dark-theme & {
      opacity: 1;
    }
  }
}

.btn-group,
.btn-group-vertical {
  > .btn:first-child:not(:last-child):not(.dropdown-toggle) {
    border-radius: $btn-border-radius-base;
  }

  > .btn:last-child:not(:first-child) {
    border-radius: $btn-border-radius-base;
  }

  > .btn:not(:first-child):not(:last-child):not(.dropdown-toggle) {
    border-radius: $btn-border-radius-base;
  }
}

.btn-group {
  > .btn:not(:last-child) {
    margin-right: .5rem;
  }
}

.btn-group-vertical {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;

  > .btn:not(:last-child) {
    margin-bottom: .5rem;
  }

  > .btn {
    width: auto;
  }

  >.btn-block-mobile {
    @media only screen and (max-width: $screen-xs-max) {
      display: block;
      width: 100%;
    }
  }
}

// Toggle button group

.btn-group-toggle {
  margin-bottom: 1rem;

  > .btn {
    width: 50%;

    &.btn-option {
      margin-right: 0;
    }
  }

  > .btn:first-child:not(:last-child):not(.dropdown-toggle) {
    border-bottom-right-radius: 0;
    border-top-right-radius: 0;
  }

  > .btn:last-child:not(:first-child) {
    border-bottom-left-radius: 0;
    border-top-left-radius: 0;
  }
}

.btn-group-teal {
  .btn-option {
    border: 1px solid $cr-teal;
    background: $cr-white;
    color: $cr-teal;

    &:hover {
      background: $cr-white;
      border-color: $cr-teal;
      color: $cr-teal;
    }

    &.active,
    &:active,
    &:focus:hover {
      background: $cr-teal;
      border-color: $cr-teal;
      box-shadow: none;
      color: $cr-white;

      &:focus,
      &:hover {
        background: $cr-teal;
        border-color: $cr-teal;
        color: $cr-white;
      }
    }
  }

  .dark-theme & {
    .btn-option {
      background: transparent;

      &.active,
      &:active,
      &:focus:hover,
      &.active:focus,
      &:active:focus,
      &.active:hover,
      &:active:hover {
        background: $cr-teal;
      }
    }
  }
}

.btn-group-primary {
  .btn-option {
    border: 1px solid $btn-primary-border;
    background: transparent;
    color: $btn-toggle-primary-color;

    &:hover {
      background: transparent;
      border-color: $btn-primary-border;
      color: $btn-toggle-primary-color;
    }

    &.active,
    &:active,
    &:focus:hover {
      background: $btn-primary-bg;
      border-color: $btn-primary-border;
      box-shadow: none;
      color: $btn-primary-color;

      &:focus,
      &:hover {
        background: $btn-primary-bg;
        border-color: $btn-primary-border;
        color: $btn-primary-color;
      }
    }
  }

  .dark-theme & {
    .btn-option {
      background: transparent;

      &.active,
      &:active,
      &:focus:hover,
      &.active:focus,
      &:active:focus,
      &.active:hover,
      &:active:hover {
        background: $btn-primary-bg;
      }
    }
  }
}

// Disabled buttons styles
a {
  &.btn {
    &.disabled {
      pointer-events: auto;
    }
  }
}

// Block-level buttons on mobile screens
.btn-block-mobile {
  @media only screen and (max-width: $screen-xs-max) {
    display: block;
    width: 100%;
  }
}

// Flexbox button groups - Horizontal layout
.btn-group-row {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  margin-right: -5px;
  margin-left: -5px;
  justify-content: space-between;

  .btn-option {
    &.btn-flex {
      min-height: 2rem;
      flex: 1 1 auto;
      margin: 4px;
      padding-left: 1rem;
      padding-right: 1rem;
    }
  }
}

// Flexbox button groups - Vertical layout
.btn-group-block {
  display: flex;
  flex-flow: column nowrap;

  &[type='submit'] {
    font-size: .875rem;
  }

  .btn-flex {
    flex: 1 1 auto;
    min-height: 3.5rem;
    margin: 4px 0;
  }

  .btn-option {
    &.btn-flex {
      margin-right: 0;
    }
  }

  .row {
    > div {
      position: relative;
      float: left;
      width: 50%;
      min-height: 1px;
      padding-left: 1rem;
      padding-right: 1rem;

      &.full-width {
        width: 100%;
      }
    }
  }

  .btn-circle__icon {
    .fa {
      padding-right: 8px;
      vertical-align: middle;
    }

    .fa-circle-thin {
      display: inline-block;
    }

    .fa-check-circle {
      display: none;
    }
  }
}




// Single Toggle Button
.btn-toggle {
  $btn-toggle-styles: (
    primary: (bg: $btn-primary-bg, bc: $btn-primary-border),
    secondary: (bg: $btn-secondary-bg, bc: $btn-secondary-border),
    gray: (bg: $btn-gray-bg, bc: $btn-gray-border),
    option: (bg: $btn-option-bg, bc: $btn-option-border),
    default: (bg: $btn-default-bg, bc: $btn-default-border)
  );

  @each $style, $map in $btn-toggle-styles {
    &.btn-#{$style} {
      &,
      &:active,
      &:active:focus,
      &:focus,
      &:hover {
        background: map-get($map, bg);
        border-color: map-get($map, bc);
        box-shadow: none;
      }
    }
  }

  &.btn-link,
  &.btn-link:active,
  &.btn-link:active:focus,
  &.btn-link:focus,
  &.btn-link:hover {
    text-decoration: none;
  }

  &.text-white {
    color: $cr-white;
  }
}

